added a no-scroll feature to the body element when the nav is active on mobile

--- a/app.css
+++ b/app.css
@@ -271,6 +271,11 @@ button:hover {
     padding: 30px var(--contianer-margin);
     background-color: white;
 }
+
+.no-scroll {
+    overflow: hidden;
+}
+
 .nav__action-container hr {
     display: none;
 }
@@ -877,3 +882,4 @@ button:hover {
         margin-right: 20px;
     }
 }
+
